# gl-tetris-cpp

./: CMakeLists.txt  README.md
src/: main.cpp  resource_manager.cpp  resource_manager.h  stb_image.h
src/game/: board.cpp  board.h  game.cpp  game.h  input.h  player.cpp  player.h  row.cpp  row.h  shape.cpp  shape.h
src/graphics/: align.h  batch.cpp  batch.h  color.h  config.h  graphics.cpp  graphics.h  label.h  shader.cpp  shader.h  sprite.h  surface.cpp  surface.h  texture.cpp  texture.h  texture_region.h  vertex.h
src/inputs/: inputs.cpp  inputs.h
